--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 				<input type="submit" value="Старт" id="check"> 
 			</div>
 			<br>
-			<div class="timer">1111</div>
+			<div class="timer"><script></script></div>
 		</div>
 
 	</body>
